--- a/slides/cap1/index.Rmd
+++ b/slides/cap1/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title       : "Español 1.5"
 subtitle    : "Capítulo 1"
-author      : "Joseph V. Casillas"
+author      : "Juan Manuel V. Casillas"
 date        : "Middlebury College | Verano 2021"
 output:
   xaringan::moon_reader:
